# funcXtraining

./: .gitignore  README.md  input  output  setup.cfg
condor/: .viminfo  job.jdl  job_eval.jdl  job_eval_photon.jdl  job_eval_pion.jdl  job_submit.jdl  job_train.jdl  job_train_photon.jdl  job_train_photon_step2.jdl  job_train_pion.jdl  wrapper.sh
config/: config_BNReLU.json  config_BNswish.json  config_BNswishHe.json  config_GANv1.json  config_SN.json  config_hpo1.json  config_hpo2.json  config_hpo3.json  config_noBN.json
training/: collect.py  common.py  data.py  develop.ipynb  evaluate.py  model.py  setup.sh  train.ipynb  train.py
