[metadata]
name = training
version = 0.0.1
author = example author
author_email = example@email.com
description = My package description
long_description = file: README.md
classifiers =
    Programming Language :: Python :: 3


[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.7
install_requires =
    matplotlib
    numpy
    h5py
    tensorflow-macos
    pandas
    quickstats